# SDL_OpenGL_boilerplate

./: .gitignore  .gitmodules  Actor.cpp  Bodhisattva  CMakeLists.txt  Camera.cpp  Engine.hpp  LICENSE  Material.hpp  Mesh.cpp  Model.hpp  README.md  SDL_OpenGL_boilerplate.filters  SDL_OpenGL_boilerplate.vcxproj  Texture.cpp  Texture.hpp  bodhisattva_vs_2017.sln  main.cpp
Example/: Example.vcxproj  Example.vcxproj.filters  main.cpp
Example/shaders/: color-block-frag.glsl  color-frag.glsl
Example/x64/Debug/: vc141.idb
Example/x64/Debug/Example.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Models/Demo/: Sphere_green.mtl  Sphere_purple.mtl  Sphere_yellow.mtl  demoscene.blend  demoscene.blend1  island.mtl  lighthouse.mtl
Textures/: water.jfif
bodhisattva_vs_2017/: bodhisattva_vs_2017.vcxproj  bodhisattva_vs_2017.vcxproj.filters
bodhisattva_vs_2017/Debug/: bodhisattva_vs_2017.idb
bodhisattva_vs_2017/Debug/bodhisat.437DE240.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  bodhisattva_vs_2017.lastbuildstate
bodhisattva_vs_2017/x64/Debug/: bodhisattva_vs_2017.idb
bodhisattva_vs_2017/x64/Debug/bodhisat.437DE240.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  bodhisattva_vs_2017.lastbuildstate
cmake/: Findassimp.cmake
include/: Actor.hpp  Camera.hpp  Debug.hpp  Engine.hpp  Light.hpp  Material.hpp  Mesh.hpp  Model.hpp  Rigidbody.hpp  Scene.hpp  Texture.hpp
include/glad/: glad.h
shaders/: boat-vert.glsl  color-frag.glsl  frag.glsl  unlit-frag.glsl  vert.glsl  water-frag.glsl  water-vert.glsl
src/: Actor.cpp  Actor.hpp  Camera.cpp  Camera.hpp  Debug.cpp  Debug.h  Debug.hpp  Engine.cpp  Engine.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Rigidbody.cpp  Scene.cpp  Scene.hpp  Texture.cpp  Texture.hpp
src/Physics/: Rigidbody.cpp  Rigidbody.h  Rigidbody.hpp
x64/Debug/: vc141.idb
x64/Debug/SDL_Open.57a9ba3a.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SDL_OpenGL_boilerplate.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/shaders/: boat-vert.glsl  unlit-frag.glsl  water-vert.glsl
